# inha26-summer-ros

./: 01_ROS2_기초.md  02_Limo_Pro_기초.md  03_자율주행_미션.md  Limo_Pro_초기화.md  README.md  SD카드 백업 및 굽기.md
limo_mission/: CMakeLists.txt  README.md
limo_mission/cfg/: LaneDetect.cfg  ObstacleAvoid.cfg  Pedestrian.cfg  Roundabout.cfg  TrafficLight.cfg
limo_mission/config/: lane_detect.yaml  obstacle_avoid.yaml  parking.yaml  pedestrian.yaml  roundabout.yaml  traffic_light.yaml
limo_mission/launch/: bringup.launch  lane_tracing.launch  obstacle_avoid.launch  parking.launch  pedestrian.launch  roundabout.launch  traffic_light.launch
limo_mission/scripts/: aruco_detector_node.py  aruco_lane_tuner.py  parking_node.py
